fixed some css alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -173,10 +173,10 @@ header {
 .restaurant-map-container {
   display: flex;
   align-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: row;
 }
-
 /* show page image */
 
 .profile_pic {
@@ -405,6 +405,7 @@ button.btn {
 .comment-area{
   display: flex;
   flex-direction: column;
+  max-width: 600px;
 }
 
 .comment{
